# MuniCoins

./: .dockerignore  .gitignore  BUILD.md  Cargo.toml  Deployment  LICENSE  README.md  SecureNFT.sol  base_station.rs  config.toml  deno.json  deploy.rs  ethereum_compatibility.rs  foundry.toml  init.rs  issuance-authority.ts  justfile  main.rs  main.ts  municoins-whitepaper.tex  nft_security.rs  node.ts  originator_ledger.rs  package.json  slither.config.json  token_system.rs
.github/workflows/: build.yml  security.yml
analytics/: polars_daily.py
contracts/: TokenValuationLedger.sol  ValuationLinkRegistry.sol
deploy/: Dockerfile.sidecar  Dockerfile.ui-static  Dockerfile.viewer-static  nginx-viewer.conf
deploy/linkerd/: token-node.yaml
deploy/pingap/: pingap.toml
deploy/softhsm/: .gitignore  README.md  provision.sh  softhsm2.conf.example
deploy/vector/: vector.toml
docs/: frontend-architecture.md
docs/deployment/: environment-checklist.md
docs/migration/: ts-to-rust.md
docs/security/: hardened-viewer.md  mtls-and-proxy.md  mtls-authority-sidecar.md  operational-controls.md  signing-architecture-rpc-hsm.md  threat-model.md
docs/systems/: Makefile  conf.py  index.rst  intersect.rst  issuance.rst  on-chain.rst  security-ops.rst  sidecar.rst  token-node.rst  ui-viewers.rst  whitepaper-math.rst
scripts/: build.sh  serve_ui_dist.ts  verify-sidecar.sh
sidecar/: Cargo.toml  README.md
sidecar/src/: main.rs  network_policy.rs
src/: lib.rs
src/authority/: README.md  issuance_service.ts
src/authority/signers/: README.md  cryptech.ts  factory.ts  json_safe.ts  local_key.ts  opentitan.ts  sidecar_http.ts  tillitis_tkey.ts  tls_optional.ts  types.ts
src/authority/signers/cryptech/: README.md
src/authority/signers/opentitan/: README.md
src/authority/signers/tillitis_tkey/: README.md
src/http/: cors.ts
src/intersect/: engine.ts  math.ts  mod.ts  onchain.ts  types.ts
src/node/: README.md  abi.ts  bus.ts  db.ts  indexer.ts  influx.ts  run.ts  server.ts  snapshot.ts  store.ts  types.ts
src/node/sync/: README.md  ratchet.ts
test/: TokenValuationLedger.t.sol
ui/: Cargo.toml  README.md  index.html
ui/src/: lib.rs
viewer-egui/: Cargo.toml  index.html
viewer-egui/src/: app.rs  flashlight.rs  lib.rs  main.rs  schedule.rs  wasm.rs
whitepaper/: README.md
