[package]
name = "MuniCoin"
version = "0.0.1"
edition = "2025"
authors = [The Mapleseed Incorporated]
description = "Secure NFT system with Ethereum integration"

[dependencies]
# Ethereum and Web3
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
web3 = "0.19"

# Cryptography and Security
chacha20poly1305 = "0.10"
aes-gcm-siv = "0.11"
curve25519-dalek = "4.1"
blake3 = "1.5"
zeroize = { version = "1.6", features = ["derive"] }
rand = "0.8"

# Distributed Systems
libp2p = { version = "0.52", features = ["tcp", "websocket", "noise", "gossipsub", "kad", "tokio"] }
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1"

# Serialization and Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Decimal and Number Handling
rust_decimal = "1.32"
num-bigint = "0.4"
uint = "0.9"

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Logging and Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.13"
dotenv = "0.15"
clap = { version = "4.3", features = ["derive"] }

# Storage
sled = "0.34"
rocksdb = "0.21"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Testing
mockall = "0.11"
test-log = "0.2"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.2"
criterion = "0.5"

[build-dependencies]
ethers-contract = "2.0"
ethers-solc = "2.0"

[[bin]]
name = "secure_nft_system"
path = "src/main.rs"

[[bin]]
name = "deploy"
path = "src/deploy.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    ".",
]

[features]
default = ["full"]
full = [
    "marketplace",
    "monitoring",
    "distributed"
]
marketplace = []
monitoring = []
distributed = [] 