[package]
name = "municoin-root"
version = "0.0.1"
edition = "2021"
authors = ["The Mapleseed Incorporated"]
description = "Workspace root — active components: contracts (Foundry), Deno services, issuance-eip712-sidecar, viewer-egui, ui (Leptos)"

# Intentionally minimal.
[dependencies]

[lib]
name = "municoin"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    ".",
    "sidecar",
]
exclude = ["viewer-egui", "ui"]
resolver = "2"
