[package]
name = "issuance-eip712-sidecar"
version = "0.1.0"
edition = "2021"
authors = ["The Mapleseed Incorporated"]
license = "LicenseRef-Commercial"
description = "HTTP EIP-712 signing service for TokenValuationLedger issuance certificates"

[[bin]]
name = "issuance-eip712-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
ipnet = "2"
ethers = { version = "2.0.14", default-features = false, features = ["legacy", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
